--- a/view/Registro.xaml
+++ b/view/Registro.xaml
@@ -13,8 +13,8 @@
         <TextBox x:Name="InsiraNovoNome" HorizontalAlignment="Left" Height="36" Margin="218,94,0,0" TextWrapping="Wrap" Text="Nome" VerticalAlignment="Top" Width="182" TextChanged="InsiraNovoNome_TextChanged" BorderBrush="#FF1B4CDC"/>
         <TextBox x:Name="InsiraNovoEmail" HorizontalAlignment="Left" Height="36" Margin="218,173,0,0" TextWrapping="Wrap" Text="Email" VerticalAlignment="Top" Width="182" TextChanged="InsiraNovoNome_TextChanged" BorderBrush="#FF1B4CDC"/>
         <TextBox x:Name="InsiraNovaSenha" HorizontalAlignment="Left" Height="36" Margin="218,261,0,0" TextWrapping="Wrap" Text="Senha&#xD;&#xA;" VerticalAlignment="Top" Width="182" TextChanged="InsiraNovoNome_TextChanged" BorderBrush="#FF1B4CDC"/>
-        <Button x:Name="BotaoNovoRegistrar" Content="Registrar" HorizontalAlignment="Left" Height="50" Margin="565,167,0,0" VerticalAlignment="Top" Width="116" Background="#FF1B4CDC" FontWeight="Bold" FontSize="14" Click="BotaoNovoRegistrar_Click"/>
-        <Button x:Name="BotaoPossuiLogin" Content="Já possui Conta?" HorizontalAlignment="Left" Height="34" Margin="570,231,0,0" VerticalAlignment="Top" Width="106" Background="#FF5E87FF" FontWeight="Bold" Click="BotaoPossuiLogin_Click"/>
+        <Button x:Name="BotaoNovoRegistrar" Content="Registrar" HorizontalAlignment="Left" Height="50" Margin="565,167,0,0" VerticalAlignment="Top" Width="116" Background="#FF02154E" FontWeight="Bold" FontSize="14" Click="BotaoNovoRegistrar_Click" Foreground="White"/>
+        <Button x:Name="BotaoPossuiLogin" Content="Já possui Conta?" HorizontalAlignment="Left" Height="34" Margin="570,231,0,0" VerticalAlignment="Top" Width="106" Background="#FF1B4CDC" FontWeight="Bold" Click="BotaoPossuiLogin_Click" Foreground="White"/>
 
     </Grid>
 </Window>
